--- a/package.json
+++ b/package.json
@@ -10,11 +10,17 @@
   },
   "dependencies": {
     "@next/font": "13.1.6",
+    "axios": "^1.3.3",
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^16.0.1",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.9.1",
     "next": "13.1.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "validator": "^13.9.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
